Correción en vistas Agregar producto y actualizar producto, correcion en vista de ventas y ademas se normalizo un poco la interfaz (templates)

--- a/templates/Estadistica/venta_detail.html
+++ b/templates/Estadistica/venta_detail.html
@@ -11,39 +11,42 @@
 	<div class="panel-body">
 		<table class="table table-hover">
 			<tr>
-				<td align="right"><strong>Ticket:</strong></td>
+				<td class="text-right"><strong>Ticket:</strong></td>
 				<td><strong>{{object.tiket}}</strong></td>
-				<td  align="right"><strong>Fecha:</strong></td>
+                <td></td>
+				<td class="text-right"><strong>Fecha:</strong></td>
 				<td><strong>{{object.creado|date:"d-m-Y"}}</strong></td>
 			</tr>
             <tr>
-                <td align="center"><strong>#</strong></td>
+                <td class="text-center"><strong>#</strong></td>
                 <td><strong>Producto</strong></td>
-                <td><strong>Cantidad</strong></td>
-                <td><strong>Precio</strong></td>
+                <td class="text-center"><strong>Cantidad</strong></td>
+                <td class="text-center"><strong>Precio</strong></td>
+                <td class="text-center"><strong>Subtotal</strong></td>
             </tr>
             {% for x in Venta_producto %}
             <tr>
-                <td align="center">{{ forloop.counter }}</td>
+                <td class="text-center">{{ forloop.counter }}</td>
                 <td title="{{ x.nombre }}">{{ x.nombre|slice:":45" }}</td>
-                <td>{{ x.cantidad }}</td>
-                <td>{{ x.precio|intcomma }}</td>
+                <td class="text-center">{{ x.cantidad }}</td>
+                <td class="text-center">{{ x.precio|intcomma }}</td>
+                <td class="text-center">{{ x.subtotal|intcomma }}</td>
             </tr>
             {% endfor %}
             <tr>
-                <td></td><td></td>
-                <td align="right"><Strong>Total:</Strong></td>
-                <td><strong>$ {{object.total|intcomma}}</strong></td>
+                <td></td><td></td><td></td>
+                <td class="text-right"><Strong>Total:</Strong></td>
+                <td class="text-center text-danger"><strong>$ {{object.total|intcomma}}</strong></td>
             </tr>
             <tr>
-                <td></td><td></td>
-                <td align="right"><Strong>Efectivo:</Strong></td>
-                <td><strong>$ {{object.efectivo|intcomma}}</strong></td>
+                <td></td><td></td><td></td>
+                <td class="text-right"><Strong>Efectivo:</Strong></td>
+                <td class="text-center text-success"><strong>$ {{object.efectivo|intcomma}}</strong></td>
             </tr>
             <tr>
-                <td></td><td></td>
-                <td align="right"><Strong>Cambio:</Strong></td>
-                <td><strong>$ {{object.cambio|intcomma}}</strong></td>
+                <td></td><td></td><td></td>
+                <td class="text-right"><Strong>Cambio:</Strong></td>
+                <td class="text-center text-primary"><strong>$ {{object.cambio|intcomma}}</strong></td>
             </tr>
 		</table>
 
