--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,14 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span>Dashboard</a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>Calendar</a></li>
+                            <li><a href="{% url 'Producto:url_lista' 1 %}"><span class="glyphicon glyphicon-home"></span>Productos</a></li>
+                            <li><a href="{% url 'Producto:url_lista_marca' 1 %}"><span class="glyphicon glyphicon-calendar"></span>Marcas</a></li>
                             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
-                                class="glyphicon glyphicon-list-alt"></span>Widgets <b class="caret"></b></a>
+                                class="glyphicon glyphicon-list-alt"></span>Varios <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="http://www.jquery2dotnet.com">Action</a></li>
-                                    <li><a href="http://www.jquery2dotnet.com">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="#">Biografias</a></li>
+                                    <li><a href="#">Mapas</a></li>
+                                    <li><a href="#">Monografias</a></li>
                                     <li class="divider"></li>
                                     <li><a href="#">Separated link</a></li>
                                     <li class="divider"></li>
@@ -202,7 +202,7 @@
                                 <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
                                     <h3> Reportes </h3>
                                     <ul>
-                                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                                        <li> <a href="{% url 'Estadistica:url_lista' 1 %}"> Ventas </a> </li>
                                         <li> <a href="#"> Lorem Ipsum </a> </li>
                                         <li> <a href="#"> Lorem Ipsum </a> </li>
                                         <li> <a href="#"> Lorem Ipsum </a> </li>
