Se agrego funcionalidad al formulario de busqueda las vistas de listado de productos y marcas, se mejoro la estetica y agrego nueva funcion de contador de productos encontrados. Se agrego a los archivos staticos  el archivo de jquery. Y se corrigio/limpio el codigo (python) de las aplicaciones para cumplir con el estandar PEP 8.

--- a/templates/base.html
+++ b/templates/base.html
@@ -241,10 +241,10 @@
 
 	<!-- Scripts -->
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="{% static 'js/jquery.1.11.2.min.js' %}"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     
-	<script src="{% static "js/menu.js"%}"></script>
+	<script src="{% static "js/menu.js" %}"></script>
     {% block script %}{% endblock %}
     
 
