Se modifico la vista de lista de productos para aceptar un parametro de filtrado por marca, y se agrego enlase a esta busqueda desde el listado de marcas. Ademas se modifico el menu para tener mas consistencia.

--- a/templates/Producto/marca_list.html
+++ b/templates/Producto/marca_list.html
@@ -35,11 +35,11 @@
             {% endif %}
 			{% for prod in object_list %}
 				<tr>
-					<td><a class="btn btn-default btn-sm btn-block">{{prod.marca}}</a></td>
+					<td><a href="{% url 'Producto:url_lista' 1 %}?marca_prod={{ prod.marca }}" title="Ver productos de esta marca." class="btn btn-default btn-sm btn-block">{{prod.marca}}</a></td>
 
 					<td><a href=""></a>
 						<div class="btn-group pull-right">
-                            <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+                            <button type="button" title="Opciones." class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
                                 <span class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
