--- a/templates/Producto/producto_form.html
+++ b/templates/Producto/producto_form.html
@@ -46,7 +46,7 @@
 
 <div class="panel panel-default offer">
     <div class="panel-heading">
-        <h3>Producto</h3>
+        <h3> <i class="glyphicon glyphicon-barcode"></i> Producto </h3>
     </div>
     <div class="panel-body">
         <form role="form" method="POST">{% csrf_token %}
